--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   </div>
                   <div class="col-md-6 col-sm-6 ">
                      <ul class="social_icon1">
-                        <li> F0llow Us
+                        <li> Síguenos
                         </li>
                         <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
                            </a>
@@ -88,7 +88,7 @@
                      </ul>
                   </div>
                   <div class="col-md-4 col-sm-4 ">
-                     <a class="logo" href="#"><img src="images/logo.png" alt="#" /></a>
+                     <a class="logo" href="#">Creación Web "El Pirata"</a>
                   </div>
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon ">
@@ -415,8 +415,8 @@
          <div class="row">
             <div class="col-md-7">
                <div class="titlepage">
-                  <h2><strong class="yellow">CREATE</strong><br>PERSONALISED Business</h2>
-                  <p>ss normal distribution of letters, as opposed to using </p>
+                  <h2><strong class="yellow">Creamos</strong><br>Diseños personalizados</h2>
+                  <p>Expertos en HTML y CSS</p>
                </div>
             </div>
          </div>
@@ -424,33 +424,33 @@
             <div class="col-md-3 col-sm-6">
                <div id="ho_color" class="business_box">
                   <i><img src="images/business_icon1.png" alt="#" /></i>
-                  <h3>23</h3>
-                  <p>NOMINATIONS </p>
+                  <h3>30</h3>
+                  <p>Premios a nivel internacional</p>
                </div>
             </div>
             <div class="col-md-3 col-sm-6">
                <div id="ho_color" class="business_box">
                   <i><img src="images/business_icon2.png" alt="#" /></i>
                   <h3>31</h3>
-                  <p>AGENCIES</p>
+                  <p>Empresas profesionales trabajan con nosotros regularmente</p>
                </div>
             </div>
             <div class="col-md-3 col-sm-6">
                <div id="ho_color" class="business_box">
                   <i><img src="images/business_icon3.png" alt="#" /></i>
-                  <h3>7</h3>
-                  <p>AWARDS</p>
+                  <h3>74</h3>
+                  <p>Premios a nivel nacional</p>
                </div>
             </div>
             <div class="col-md-3 col-sm-6">
                <div id="ho_color" class="business_box">
                   <i><img src="images/business_icon4.png" alt="#" /></i>
-                  <h3>8</h3>
-                  <p>Supported </p>
+                  <h3>30</h3>
+                  <p>Agentes para Atención al Cliente</p>
                </div>
             </div>
             <div class="col-md-12">
-               <a class="read_more" href="#">Read More</a>
+               <a class="read_more" href="#">Leer más</a>
             </div>
          </div>
       </div>
@@ -741,7 +741,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <a class="logo2" href="#"><img src="images/loogo2.png" alt="#" /></a>
+                  <a class="logo2" href="#">Creación Web "El Pirata"</a>
                </div>
                <div class="col-lg-5 col-md-6 col-sm-6">
                   <h3>Contacta con nosotros</h3>
@@ -774,15 +774,7 @@
                   </ul>
                </div>
                <div class="col-lg-2 col-md-6 col-sm-6">
-                  <h3>Recent Post</h3>
                   <ul class="link_icon">
-                     <li> <a href="#"> Participate in staff </a></li>
-                     <li>
-                        <a href="#">
-                           meetings manage
-                     </li>
-                     <li> <a href="#"> dedicated to </a></li>
-                     <li> <a href="#"> marketing</a></li>
                      <li> <a href="#">17 de mayo de 2024</a></li>
                   </ul>
                </div>
