--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>webwing</title>
+      <title>Sobre nosotros</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -20,7 +20,7 @@
       <link rel="stylesheet" href="css/responsive.css">
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/pirate.jpg" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -46,23 +46,23 @@
                   <div class="row">
                      <div class="col-md-6 col-sm-6">
                         <ul class="lan">
-                           <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="images/fleg.png" alt="#"/></li>
+                           <li><i class="fa fa-globe" aria-hidden="true"></i>Idioma: <img width="15px"  height="15px" src="images/Flag_of_Spain.svg.png" alt="#"/></li>
                         </ul>
                         <form action="#" >
                            <div class="select-box">
-                              <label for="select-box1" class="label select-box1"><span class="label-desc">English</span> </label>
+                              <label for="select-box1" class="label select-box1"><span class="label-desc">Español</span> </label>
                               <select id="select-box1" class="select">
+                                 <option value="Choice 1">Español</option>
                                  <option value="Choice 1">English</option>
-                                 <option value="Choice 1">Falkla</option>
-                                 <option value="Choice 2">Germa</option>
-                                 <option value="Choice 3">Neverl</option>
+                                 <option value="Choice 2">Deutsch</option>
+                                 <option value="Choice 3">Français</option>
                               </select>
                            </div>
                         </form>
                      </div>
                      <div class="col-md-6 col-sm-6 ">
                         <ul class="social_icon1">
-                           <li> F0llow Us
+                           <li>Síguenos
                            </li>
                            <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
                               </a>
@@ -82,15 +82,15 @@
                   <div class="row d_flex">
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon">
-                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +01 1234567890</a> </li>
+                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Llámanos: 928524577</a> </li>
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/logo.png" alt="#"/></a>
+                        <a class="logo" href="#">Creación Web "El Pirata"</a>
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com</a> </li>
+                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>creacionwebelpirata@gmail.com</a> </li>
                         </ul>
                      </div>
                   </div>
@@ -107,22 +107,22 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item ">
-                                    <a class="nav-link" href="index.html"> Home  </a>
+                                    <a class="nav-link" href="index.html">Inicio</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="about.html">Sobre Nosotros</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="service.html">Servicios</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="team.html">Nuestro equipo</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="client.html">Clientes</a>
                                  </li>
                                  <li class="nav-item active">
-                                    <a class="nav-link" href="about.html">about</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">services</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="team.html">team </a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="client.html">Clients</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html"> contact us </a>
+                                    <a class="nav-link" href="contact.html">Contacta con nosotros</a>
                                  </li>
                               </ul>
                            </div>
@@ -131,7 +131,7 @@
                      <div class="col-md-3 col-sm-5 d_none">
                         <ul class="sign">
                            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                           <li><a class="sign_btn" href="#">sign up now</a></li>
+                           <li><a class="sign_btn" href="#">Registrarse</a></li>
                         </ul>
                      </div>
                   </div>
@@ -149,18 +149,18 @@
                <div class="col-md-12 col-lg-7">
                   <div class="about_box">
                      <div class="titlepage">
-                        <h2><strong class="yellow">About US</strong><br> WE CAN HELP YOUR business GROW</h2>
+                        <h2><strong class="yellow">Sobre nosotros</strong><br>Podemos ayudarte a promocionar tu negocio</h2>
                      </div>
-                     <h3>EVERYTHING YOU NEED IN ONE SOLUTION</h3>
-                     <span>HELP YOUR NEXT CAREER MOVE MORE SMOOTHER AND <br> MORE EFFICIENT</span>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of usingt</p>
-                     <span class="try">TRY ONLINE CV BUILDER FOR Free</span>
-                     <a class="read_morea" href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                     <h3>Páginas web esplendorosas con las que encandilar a los clientes</h3>
+                     <span>Dake vitalidad a tu negocio con una gran página web.<br>Hazlo más eficiente y dinámico</span>
+                     <p>Está demostrado que los negocios con una buena página web, triunfan más. ¡No esperes más y contrata a Creación Web "El Pirata".</p>
+                     <span class="try">¡No seas un marinero de agua dulce y contrata a Creación Web "El Pirata" hoy mismo! </span>
+                     <a class="read_morea" href="#">Contratar ya<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                   </div>
                </div>
                <div class="col-md-12 col-lg-5">
                   <div class="about_img">
-                     <figure><img src="images/about_img2.jpg" alt="#"/></figure>
+                     <figure><img src="images/about_img2.jpg" alt="#" /></figure>
                   </div>
                </div>
             </div>
@@ -169,65 +169,57 @@
       <!-- about section -->
      
       <!--  footer -->
-      <footer >
+      <footer>
          <div class="footer">
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <a class="logo2" href="#"><img src="images/loogo2.png" alt="#"/></a>
+                     <a class="logo2" href="#">Creación Web "El Pirata"</a>
                   </div>
                   <div class="col-lg-5 col-md-6 col-sm-6">
-                     <h3>Contact Us</h3>
+                     <h3>Contacta con nosotros</h3>
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                           <br> United Kingdom 
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Calle del Almirante Lezo 136 (San Bartolomé)
+                           <br> España
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br> demo@gmail.com</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01 1234567890<br>+01 1234567889</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>creacionwebelpirata@gmail.com<br>creacionwebelpirata@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>928524577<br>928524577</li>
                      </ul>
                      <ul class="social_icon">
                         <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                         <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li> <a href="#">   <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Menus</h3>
+                     <h3>Menús</h3>
                      <ul class="link_icon">
-                        <li > <a href="index.html"> Home</a></li>
-                        <li class="active">
+                        <li class="active"> <a href="index.html">Inicio</a></li>
+                        <li>
                            <a href="about.html">
-                              </i>About Us  
+                              </i>Sobre nosotros
                         </li>
-                        <li> <a href="service.html"> </i>Services</a></li>
-                         <li> <a href="team.html"></i>Team</a></li>
-                        <li> <a href="client.html"></i>Clients</a></li>
-                        <li> <a href="contact.html"></i>Contact us</a></li>
+                        <li> <a href="service.html"> </i>Servicios</a></li>
+                        <li> <a href="team.html"></i>Equipo</a></li>
+                        <li> <a href="client.html"></i>Clientes</a></li>
+                        <li> <a href="contact.html"></i>Contáctanos</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Recent Post</h3>
                      <ul class="link_icon">
-                        <li > <a href="#"> Participate in staff </a></li>
-                        <li>
-                           <a href="#">
-                              meetings manage 
-                        </li>
-                        <li> <a href="#"> dedicated to </a></li>
-                        <li> <a href="#"> marketing</a></li>
-                        <li> <a href="#"> November 25, 2019</a></li>
+                        <li> <a href="#">17 de mayo de 2024</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6">
-                     <h3>Newsletter</h3>
+                     <h3>Suscríbete a nuestra Newsletter</h3>
                      <form id="request" class="main_form">
                         <div class="row">
                            <div class="col-md-12 ">
-                              <input class="news" placeholder="Your Email" type="type" name="Your Email"> 
+                              <input class="news" placeholder="Email" type="type" name="Your Email">
                            </div>
                            <div class="col-md-12">
-                              <button class="send_btn">Send</button>
+                              <button class="send_btn">Enviar</button>
                            </div>
                         </div>
                      </form>
@@ -238,7 +230,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved.<a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>© 2024 Todos los derechos reservados a Creación web "El Pirata".</p>
                      </div>
                   </div>
                </div>
