--- a/client.html
+++ b/client.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>webwing</title>
+      <title>Clientes</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -20,7 +20,7 @@
       <link rel="stylesheet" href="css/responsive.css">
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/pirate.jpg" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -46,23 +46,24 @@
                   <div class="row">
                      <div class="col-md-6 col-sm-6">
                         <ul class="lan">
-                           <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="images/fleg.png" alt="#"/></li>
+                           <li><i class="fa fa-globe" aria-hidden="true"></i>Idioma: <img width="15px"  height="15px" src="images/Flag_of_Spain.svg.png" alt="#"/></li>
                         </ul>
                         <form action="#" >
+                           rm action="#" >
                            <div class="select-box">
-                              <label for="select-box1" class="label select-box1"><span class="label-desc">English</span> </label>
+                              <label for="select-box1" class="label select-box1"><span class="label-desc">Español</span> </label>
                               <select id="select-box1" class="select">
+                                 <option value="Choice 1">Español</option>
                                  <option value="Choice 1">English</option>
-                                 <option value="Choice 1">Falkla</option>
-                                 <option value="Choice 2">Germa</option>
-                                 <option value="Choice 3">Neverl</option>
+                                 <option value="Choice 2">Deutsch</option>
+                                 <option value="Choice 3">Français</option>
                               </select>
                            </div>
                         </form>
                      </div>
                      <div class="col-md-6 col-sm-6 ">
                         <ul class="social_icon1">
-                           <li> F0llow Us
+                           <li>Síguenos
                            </li>
                            <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
                               </a>
@@ -82,15 +83,15 @@
                   <div class="row d_flex">
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon">
-                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +01 1234567890</a> </li>
+                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Llámanos: 928524577</a> </li>
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/logo.png" alt="#"/></a>
+                        <a class="logo" href="#">Creación Web "El Pirata"</a>
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com</a> </li>
+                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>creacionwebelpirata@gmail.com</a> </li>
                         </ul>
                      </div>
                   </div>
@@ -107,22 +108,22 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item ">
-                                    <a class="nav-link" href="index.html"> Home  </a>
+                                    <a class="nav-link" href="index.html">Inicio</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="about.html">about</a>
+                                    <a class="nav-link" href="about.html">Sobre Nosotros</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="service.html">services</a>
+                                    <a class="nav-link" href="service.html">Servicios</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="team.html">team </a>
+                                    <a class="nav-link" href="team.html">Nuestro equipo</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="client.html">Clientes</a>
                                  </li>
                                  <li class="nav-item active">
-                                    <a class="nav-link" href="client.html">Clients</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html"> contact us </a>
+                                    <a class="nav-link" href="contact.html">Contacta con nosotros</a>
                                  </li>
                               </ul>
                            </div>
@@ -131,7 +132,7 @@
                      <div class="col-md-3 col-sm-5 d_none">
                         <ul class="sign">
                            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                           <li><a class="sign_btn" href="#">sign up now</a></li>
+                           <li><a class="sign_btn" href="#">Registrarse</a></li>
                         </ul>
                      </div>
                   </div>
@@ -144,12 +145,12 @@
       <!-- banner -->
      
       <!-- testimonial -->
-      <div id="client"  class="testimonial">
+      <div id="client" class="testimonial">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2><strong class="yellow">testimonial</strong><br>What is Syas our clients</h2>
+                     <h2><strong class="yellow">Nuestro gran equipo garantiza calidad y trabajo duro</strong><br>Compromiso con nuestros clientes</h2>
                   </div>
                </div>
             </div>
@@ -167,8 +168,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Creación web "El Pirata", se compromete a ofrecer los mejores resultados posibles acorde a los parámetros dados por nuestra clientela. Creación web "El Pirata", no se hace responsable de los hurtos de páginas web por parte de otros usuarios.</p>
+                                 <i><img width="60px" height="60px" src="images/Robert_Edward_Lee.jpg" alt="#" /></i> <span>Desarrollador Lee</span>
                               </div>
                            </div>
                         </div>
@@ -181,8 +182,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Con disciplina y trabajo duro, su página web quedará niquelada y para ernmarcar.</p>
+                                 <i><img width="60px" height="60px" src="images/170px-Napoleon_-_2.jpg" alt="#" /></i> <span>Desarrollador Napo</span>
                               </div>
                            </div>
                         </div>
@@ -195,8 +196,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Si no está de acuerdo con nuestros procedimientos, siempre puede echarle azúcar, mandarse a mudar, o hablar con nuestro departamento de quejas a cargo del desarrollador Clint.</p>
+                                 <i><img width="60px" height="60px" src="images/clint-eastwood-in-the-outlaw-josey-wales-bettmann.jpg" alt="#" /></i> <span>Desarrollador Clint</span>
                               </div>
                            </div>
                         </div>
@@ -205,75 +206,67 @@
                </div>
             </div>
             <a class="carousel-control-prev" href="#testimo" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+               <i class="fa fa-chevron-left" aria-hidden="true"></i>
             </a>
             <a class="carousel-control-next" href="#testimo" role="button" data-slide="next">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+               <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
          </div>
       </div>
       <!-- end testimonial -->
     
       <!--  footer -->
-      <footer >
+      <footer>
          <div class="footer">
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <a class="logo2" href="#"><img src="images/loogo2.png" alt="#"/></a>
+                     <a class="logo2" href="#">Creación Web "El Pirata"</a>
                   </div>
                   <div class="col-lg-5 col-md-6 col-sm-6">
-                     <h3>Contact Us</h3>
+                     <h3>Contacta con nosotros</h3>
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                           <br> United Kingdom 
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Calle del Almirante Lezo 136 (San Bartolomé)
+                           <br> España
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br> demo@gmail.com</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01 1234567890<br>+01 1234567889</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>creacionwebelpirata@gmail.com<br>creacionwebelpirata@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>928524577<br>928524577</li>
                      </ul>
                      <ul class="social_icon">
                         <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                         <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li> <a href="#">   <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Menus</h3>
+                     <h3>Menús</h3>
                      <ul class="link_icon">
-                        <li > <a href="index.html"> Home</a></li>
+                        <li class="active"> <a href="index.html">Inicio</a></li>
                         <li>
                            <a href="about.html">
-                              </i>About Us  
+                              </i>Sobre nosotros
                         </li>
-                        <li> <a href="service.html"> </i>Services</a></li>
-                         <li> <a href="team.html"></i>Team</a></li>
-                        <li class="active"> <a href="client.html"></i>Clients</a></li>
-                        <li> <a href="contact.html"></i>Contact us</a></li>
+                        <li> <a href="service.html"> </i>Servicios</a></li>
+                        <li> <a href="team.html"></i>Equipo</a></li>
+                        <li> <a href="client.html"></i>Clientes</a></li>
+                        <li> <a href="contact.html"></i>Contáctanos</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Recent Post</h3>
                      <ul class="link_icon">
-                        <li > <a href="#"> Participate in staff </a></li>
-                        <li>
-                           <a href="#">
-                              meetings manage 
-                        </li>
-                        <li> <a href="#"> dedicated to </a></li>
-                        <li> <a href="#"> marketing</a></li>
-                        <li> <a href="#"> November 25, 2019</a></li>
+                        <li> <a href="#">17 de mayo de 2024</a></li>
                      </ul>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6">
-                     <h3>Newsletter</h3>
+                     <h3>Suscríbete a nuestra Newsletter</h3>
                      <form id="request" class="main_form">
                         <div class="row">
                            <div class="col-md-12 ">
-                              <input class="news" placeholder="Your Email" type="type" name="Your Email"> 
+                              <input class="news" placeholder="Email" type="type" name="Your Email">
                            </div>
                            <div class="col-md-12">
-                              <button class="send_btn">Send</button>
+                              <button class="send_btn">Enviar</button>
                            </div>
                         </div>
                      </form>
@@ -284,7 +277,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved.<a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>© 2024 Todos los derechos reservados a Creación web "El Pirata".</p>
                      </div>
                   </div>
                </div>
