--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <!-- body -->
+<style>
+.main-layout{ background-image: url(https://www.capradio.org/cdn-cgi/image/format=auto,width=780/media/3191734/aweflyingdutchmanconceptart.jpg);
+
+
+
+
+}
+
+
+</style>
 
 <body class="main-layout">
    <!-- loader  -->
@@ -321,7 +331,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf1.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -329,7 +339,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf2.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -337,7 +347,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf3.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -345,12 +355,12 @@
                            <div class="portfolio_img">
                               <img src="images/potf4.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12">
-                           <a class="read_more" href="#">Read More</a>
+                           <a class="read_more" href="#">Ver más</a>
                         </div>
                      </div>
                   </div>
@@ -364,7 +374,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf1.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -372,7 +382,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf2.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -380,7 +390,7 @@
                            <div class="portfolio_img">
                               <img src="images/potf3.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
@@ -388,12 +398,12 @@
                            <div class="portfolio_img">
                               <img src="images/potf4.jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">View More</div>
+                                 <div class="text2">Ver más</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12">
-                           <a class="read_more" href="#">Read More</a>
+                           <a class="read_more" href="#">Leer más</a>
                         </div>
                      </div>
                   </div>
