--- a/index.html
+++ b/index.html
@@ -329,33 +329,33 @@
                      <div class="row">
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf1.jpg" alt="#" />
+                              <img src="images/htmls css.png" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Diseño con HTML y CSS</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf2.jpg" alt="#" />
+                              <img src="images/diseno-web-profesional-1 (1).png" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Diseño web profesional y de calidad</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf3.jpg" alt="#" />
+                              <img src="images/ordenadorgif.gif" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Protección y seguridad para tu página web</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf4.jpg" alt="#" />
+                              <img src="images/vscode (1).png" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Trabajamos con Visual Studio Code</div>
                               </div>
                            </div>
                         </div>
@@ -372,33 +372,33 @@
                      <div class="row">
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf1.jpg" alt="#" />
+                              <img height="287"  width="330" src="images/teckling.gif" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Trabajamos duro para satisfacer a nuestros clientes</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf2.jpg" alt="#" />
+                              <img src="images/PROMOCIONES-2 (2).jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Diseño de páginas web para empresas importantes</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf3.jpg" alt="#" />
+                              <img src="images/pasta (1).png" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Trabajamos por un precio razonable</div>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                            <div class="portfolio_img">
-                              <img src="images/potf4.jpg" alt="#" />
+                              <img src="images/wordpress (1).jpg" alt="#" />
                               <div class="middle">
-                                 <div class="text2">Ver más</div>
+                                 <div class="text2">Trabajamos con Wordpress también</div>
                               </div>
                            </div>
                         </div>
